Application-CD/RMQ/rmq-StatfulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: rmq
  name: rmq
  namespace: rmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmq
  serviceName: rmq
  template:
    metadata:
      labels:
        app: rmq
    spec:
      containers:
        - image: rabbitmq:3-management
          name: rabbitmq
          ports:
            - name: rmq-amqp
              containerPort: 5672
            - name: rmq-tls
              containerPort: 5671
            - name: rmq-http
              containerPort: 15672
            - name: prometheus
              containerPort: 15692
          # environment variables
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "status"]
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 15
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq/mnesia

  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
        namespace: rmq
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: mysql-gp3-ebs
        resources:
          requests:
            storage: "3Gi"
