Application-CD/RMQ/rmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rmq
  name: rmq
  namespace: rmq
spec:
  clusterIP: None
  ports:
    - name: amqp
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: tls
      port: 5671
      protocol: TCP
      targetPort: 5671
    - name: rmq-http
      port: 15672
      protocol: TCP
      targetPort: 15672
    - name: prometheus
      port: 15692
      protocol: TCP
      targetPort: 15692
  selector:
    app: rmq
  type: ClusterIP
