Application-CD/RMQ/rmq-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rmq
  namespace: rmq
spec:
  podSelector:
    matchLabels:
      app: rmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: app
          podSelector:
            matchLabels:
              app: app
      ports:
        - protocol: TCP
          port: 5672
